force-app/main/default/objects/Related_Document_History__c/Related_Document_History__c.object-meta.xml
<CustomObject>
    <label>Related Document History</label>
    <nameField>
        <displayFormat>Doc-{0000}</displayFormat>
        <label>Related Document History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Documents Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>