force-app/main/default/objects/Related_Document_History__c/fields/Customer_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_Email_Id__c</fullName>
    <label>Customer Email Id</label>
    <type>Email</type>
</CustomField>