force-app/main/default/objects/Related_Document_History__c/fields/Document_Generated_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Document_Generated_Date_Time__c</fullName>
    <label>Document Generated Date/Time</label>
    <type>DateTime</type>
</CustomField>